@@ -202,9 +202,9 @@ logging.getLogger().addHandler(handler)
 SYMBOLS_DIR = resource_filename(
     'flooding_visualization', 'media/flooding_visualization/symbols')
 EXTERNAL_PRESENTATION_MOUNTED_DIR = (
-    '/mnt/flooding/Flooding/presentationdatabase_totaal')
-EXTERNAL_RESULT_MOUNTED_DIR = '/mnt/flooding/Flooding/resultaten'
-TMP_DIR = '/mnt/flooding/Flooding/tmp_dir_used_by_site'
+    '//p-isilon-d1.external-nens.local/nens/flooding/flod-share/presentationdatabase_totaal')
+EXTERNAL_RESULT_MOUNTED_DIR = '//p-isilon-d1.external-nens.local/nens/flooding/flod-share/resultaten'
+TMP_DIR = '//p-isilon-d1.external-nens.local/nens/flooding/flod-share/tmp_dir_used_by_site'
 GIS_DIR = os.path.join(BUILDOUT_DIR, 'var', 'gisdata')
 
 RASTER_SERVER_URL = "http://flooding.lizard.net/wms"
